# DiscordMessageSchedulerBot

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: bot-beta.yml  bot-release.yml  docker-build.yml
src/: commands.rs  main.rs
src/commands/: ping_command.rs  schedule_command.rs
