[package]
name = "discord_message_scheduler_bot"
version = "0.2.2"
edition = "2024"
authors = ["beanbeanjuice"]

[dependencies]
chrono = "0.4.41"
csv = "1.3.1"
dotenv = "0.15.0"
glob = "0.3.2"
parse_duration = "2.1.1"
poise = "0.6.1"
serde = "1.0.219"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
